--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaCampoVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaCampoVisualizacionIntra.tmpl
@@ -54,7 +54,7 @@
                                       actions         => [
                                                           {title    => "[% 'Editar Subcampos' | i18n %]", 
                                                             action  => 'editSubcampos("[% campo.getCampo %]");',
-                                                            icon    => "icon-pencil"
+                                                            icon    => "icon-edit"
                                                           },
                                                            {title   => "[% 'Eliminar Campo' | i18n %]", 
                                                             action  => 'eliminarTodoElCampo("[% campo.getCampo %]");',
