--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuarioResult.tmpl
@@ -24,117 +24,124 @@
 			    checkTr();
 			    checkedAll('checkAllUsuariosPotenciales','chkboxUsuariosPotenciales');
 	    });
+
 </script>
 [% USE HTML %]
-<div class="well">
-  
-    <div>[% "La cantidad de usuarios es" | i18n %]:<strong> [% cantidad %]</strong></div> 
-    <div>[% "Ha buscado por" | i18n %]:<strong> [% HTML.escape(socio_busqueda) %]</strong></div>
 
-</div>
-<div class="contenedor_paginador">[% paginador %]</div>
 
-<table id="tablaResult" class="datos_tabla" width="100%" cellspacing=0 cellpadding=0>
-	<thead>
-  	<tr class="titulo_tabla_resultado">
-    		<th>
-    		      <a id="checkAllUsuariosPotenciales" class="click">
-                    <img border="0" title="Seleccionar todos" src="/intranet-tmpl/temas/DEO/imagenes/iconos/check.png">
-              </a>
-        </th>
+<fieldset>
+    <legend>[% "Resultados de la b&uacute;squeda" | i18n %]</legend>
+        <!--<div class="datos_tabla_div_user">-->
+           
+            <div class="well">
+                <div class="resultados_consulta">[% "Ha buscado por" | i18n %]:<strong>[% HTML.escape(socio_busqueda) %]</strong></div> 
+                 
 
-    		<th align="left" width="28%" class="click" onClick="ordenar('apellido')">
-                    [% "Apellido y Nombres" | i18n %]
-                </th>
-    		<th align="left" width="15%" class="click" onClick="ordenar('nro_documento')">
-                    [% "Documento" | i18n %]
-                </th>
-    		<th>
-                    [% "Cat." | i18n %]
-                </th>
-    		<th>  
-                    &iquest;[% "Habilitado" | i18n %]?
-                </th>
+                [% IF cantidad %]
+                         
+                        <div class="resultados_consulta">[% "La cantidad de usuarios es" | i18n %]: <strong>[% cantidad %]</strong></div>
+                        
+                  </div>
+                  <div class="contenedor_paginador">[% paginador %]</div>   
+                  [% PERL %]
+                      print C4::AR::Filtros::tableHeader(   
+                                        id              => "tablaResult",
+                                        class           => "",
+                                        selectAll_id    => "checkAllUsuariosPotenciales",
+                                        columns         => ['[% "Apellido y Nombres" | i18n %]','[% "Documento" | i18n %]',
+                                                            '[% "Cat." | i18n %]','&iquest;[% "Habilitado" | i18n %]?',
+                                                           
+                                                            ]
+                                                                        
+                                              ) ;
+                  [% END %]
 
-  	</tr>
-	</thead>
-	<tbody>
+                  <tbody>
+ 
+          [% FOREACH resultsloop %]
+                  <tr>
+                  
+                      <td>
+                          [% IF nomodificable %]
+                              [% "Imposible" | i18n %] 
+                          [% ELSE %]
+                              <input type="checkbox" name="chkboxUsuariosPotenciales" 
+                              id="[% socio.getNro_socio %]" 
+                              value="[% socio.getNro_socio %]">
+                          [% END %]
+                      </td>
+                  
+                      <td class="nomCompleto">
+                          [% PERL %]
+                              print C4::AR::Filtros::link_to( text =>     "[% socio.persona.getApeYNom %]",
+                                                              url=>"[% url_prefix %]/usuarios/potenciales/datosUsuario.pl", 
+                                                              params =>   ["nro_socio=[% socio.getNro_socio %]"],
+                                                              title =>    "[% 'Mostrar Detalle del Usuario' | i18n %]"
+                                                          ) ;
+                          [% END %]
+                      </td>
 
-[% FOREACH resultsloop %]
-      	<tr align="center">
-      	
-     		<td valign="middle" align="center">
-			[% IF nomodificable %]
-				[% "Imposible" | i18n %] 
-			[% ELSE %]
-				<input type="checkbox" name="chkboxUsuariosPotenciales" 
-				id="[% socio.getNro_socio %]" 
-				value="[% socio.getNro_socio %]">
-			[% END %]
-		</td>
-		
-      	<td align="left" class="nomCompleto">
-            [% PERL %]
-                print C4::AR::Filtros::link_to( text =>     "[% socio.persona.getApeYNom %]",
-                                                url=>"[% url_prefix %]/usuarios/potenciales/datosUsuario.pl", 
-                                                params =>   ["nro_socio=[% socio.getNro_socio %]"],
-                                                title =>    "[% 'Mostrar Detalle del Usuario' | i18n %]"
-                                            ) ;
-            [% END %]
-		</td>
+                      <td>
+                          [% socio.persona.getVersion_documento %]&nbsp; [% socio.persona.getNro_documento %]
+                      </td>
 
-      	<td align="left" class="documento">
-			[% socio.persona.getVersion_documento %]&nbsp; [% socio.persona.getNro_documento %]
-		</td>
+                      <td>
+                              [% socio.categoria.getDescription %]
+                      </td> 
+                      <td>
+                          <span class="[% clase %]"> <b>[% activo %]</b> </span>
+                      </td>
 
- 		<td>
-                [% socio.categoria.getDescription %]
-		</td> 
-        <td>
-			<span class="[% clase %]"> <b>[% activo %]</b> </span>
-		</td>
+                  </tr>
+          [% END %]
 
-    </tr>
-[% END %]
-	<tr valign=bottom>
-        	<td class="lineafinaltabla"  align="left" colspan="12"></td>
-        </tr>
+ 
 	</tbody>
 
+          <table>
+              <tr>
+                  <td>
+                  <input name="cantidad" id="cantidad" type="hidden" value="[% modificable %]">
+                  </td>   
+              </tr>
+              <tr>
+                  <td>
+                      <label for="accion" accesskey="t"></label>
+                      <select id="accion" name="accion">
+                          <option value="HABILITAR_PERSON" selected="selected">
+                              [% "Habilitar Seleccionados" | i18n %]
+                          </option>
+                          <option value="DESHABILITAR_PERSON">
+                              [% "Deshabilitar Seleccionados" | i18n %]
+                          </option>
+                      </select>
+                  </td>
+                  <td>
 
+                    [% PERL %]
+                              print C4::AR::Filtros::to_Button(   
+                                                                    text          => "[% 'Aceptar' | i18n %]",
+                                                                    boton         => "boton_seleccionar",
+                                                                    width         => "auto",
+                                                                    onClick       => "habilitar();",
+                                                                    alternClass   => "botonCentrado",
+                                                                    title         => "[% 'Aceptar' | i18n %]",
+                                      ) ;
+                    [% END %]
+                  </td>
+              </tr>
+          </table>
 
-<table>
-	<tr>
-		<td>
-		<input name="cantidad" id="cantidad" type="hidden" value="[% modificable %]">
-		</td>   
-	</tr>
-	<tr>
-		<td>
-			<label for="accion" accesskey="t"></label>
-			<select id="accion" name="accion">
-				<option value="HABILITAR_PERSON" selected="selected">
-                    [% "Habilitar Seleccionados" | i18n %]
-                </option>
-				<option value="DESHABILITAR_PERSON">
-                    [% "Deshabilitar Seleccionados" | i18n %]
-                </option>
-			</select>
-		</td>
-		<td>
+          [% ELSE %]
+                  </div>
+                          <div class="alert alert-info">[% 'No hay usuarios para mostrar'| i18n %]</div>
 
-          [% PERL %]
-                     print C4::AR::Filtros::to_Button(   
-                                                          text          => "[% 'Aceptar' | i18n %]",
-                                                          boton         => "boton_seleccionar",
-                                                          width         => "auto",
-                                                          onClick       => "habilitar();",
-                                                          alternClass   => "botonCentrado",
-                                                          title         => "[% 'Aceptar' | i18n %]",
-                             ) ;
           [% END %]
-		</td>
-	</tr>
-</table>
+
+
+        </div>
+</fieldset>
+
+
 
 
