--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuario.tmpl
@@ -13,34 +13,40 @@ $(document).ready(function() {
 
 <!--<div class="titulos" >[% "B&uacute;squeda de Usuarios Reales" | i18n %]</div>-->
 <fieldset>
-    <legend class="titulo_legend">[% "B&uacute;squeda de Usuarios Reales" | i18n %]</legend>
-      
+    <legend>[% "B&uacute;squeda de Usuarios Reales" | i18n %]</legend>
+    
     <section class="center-section-form">
 
       [% PERL %]
           print C4::AR::Filtros::tabbedPane(    titulo    => "",
-                                                subtitulo => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos tipos de b&uacute;squeda' | i18n %]",
+                                                subtitulo => "",
                                                 content   => [ {id => 'labels', text=> "[% 'B&uacute;squeda general' | i18n %]" },
                                                                {id => 'registro', text => "[% 'B&uacute;squeda por inicial' | i18n %]"},
                                                               ],
-                                                content_id=> ['reportes_usuarios'],
+                                                content_id=> ['busqueda_usuarios_reales'],
                                                 active_id => 'labels',
                                             );
 
       [% END %]
 
               <div class="tab-pane fade in active" id="labels">
-                   [% INCLUDE 'partials/usuarios/_busqueda_gral_usuarios.inc' %]
+                   [% INCLUDE 'partials/usuarios/_busqueda_gral_usuarios_reales.inc' %]
               </div>
               <div class="tab-pane fade" id="registro">
-                   [% INCLUDE 'partials/usuarios/_busqueda_inicial_usuarios.inc' %]
-              </div>
-            </div>
-      </div>
+                   [% INCLUDE 'partials/usuarios/_busqueda_inicial_usuarios_reales.inc' %]
+              </div><br>
+              [% PERL %]
+              print C4::AR::Filtros::setHelpInput(
+                                                   text =>"[% 'Navegue por las pesta&ntilde;as para acceder a los distintos tipos de b&uacute;squeda' | i18n %]",
+                                                   textLabel =>"[% 'INFO' | i18n %]",
+                                                   class => "info"
+                                                    
+              );
+              [% END %]
     </section>
 </fieldset>
 
-<br><br><div id="result_usuarios"> </div>
+<br><br><div id="result"> </div>
     
 
 [% INCLUDE 'intranet-bottom.inc' %]
