--- a/intranet/htdocs/intranet-tmpl/admin/global/authMethods.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/authMethods.tmpl
@@ -59,13 +59,15 @@
     }
         
     function guardarMetodo(){
-        objAH               = new AjaxHelper(updateGuardarMetodo);
-        objAH.debug         = true;
-        objAH.url           = URL_PREFIX+"/admin/global/auth_methodsDB.pl";
-        objAH.showOverlay   = true;
-        objAH.metodo        = $('#name_metodo').val();
-        objAH.tipoAccion    = "AGREGAR_METODO";
-        objAH.sendToServer();     
+        if($('#name_metodo').val() != ""){
+            objAH               = new AjaxHelper(updateGuardarMetodo);
+            objAH.debug         = true;
+            objAH.url           = URL_PREFIX+"/admin/global/auth_methodsDB.pl";
+            objAH.showOverlay   = true;
+            objAH.metodo        = $('#name_metodo').val();
+            objAH.tipoAccion    = "AGREGAR_METODO";
+            objAH.sendToServer();   
+        }  
     }
     
     function updateGuardarMetodo(responseText){ 
@@ -76,13 +78,19 @@
 
 <fieldset>
     <legend> [% "M&eacute;todos de Autenticaci&oacute;n" | i18n %]</legend>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>[% "Nombre" | i18n %]</th>
-                    <th>[% "Habilitado" | i18n %]</th>
-                </tr>
-            </thead>
+    
+            [% PERL %]
+                print C4::AR::Filtros::tableHeader(   
+                                  id              => "metodosAuthTable",
+                                  class           => "",
+                                  selectAll_id    => "",
+                                  columns         => ['[% "Nombre"|i18n %]','[% "Habilitado"|i18n %]',
+                                                     ]
+
+                                                                    
+                                        ) ;
+            [% END %]
+
             <tbody id="sortable">
                 [% FOREACH metodo IN metodos %]
                     <tr id="[% metodo.id %]">
@@ -99,9 +107,7 @@
     print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar M&eacute;todo' | i18n %]",
                                         boton   => "boton_buscar",
                                         onClick => "agregarMetodo()",
-                                        title   => "[% 'Agregar Metodo' | i18n %]",
-                                        width => "auto",
-                                        alternClass => "botonCentrado",
+                                        title   => "[% 'Agregar Metodo' | i18n %]"
     ) ;
 [% END %]
 </div>
