--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -90,6 +90,7 @@ $(document).ready( function() {
 	            <div class="controls">
 	                [% comboTipoNivelBibliografico %]
 	            </div>
+            </div>
 	         <legend><div id="estado_accion" class="titulos" style="display:none"></div></legend>
 	                      
 	</form>
