--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
@@ -24,7 +24,7 @@
                           print C4::AR::Filtros::action_button( 
                                                     button         => "btn click",
                                                     action       => 'modificarVariable("[% preferencia.getVariable %]","[% preferencia.getType %]");', 
-                                                    icon         => "icon-pencil",
+                                                    icon         => "icon-edit",
                                                   ) ;
 
 
